--- a/ByteNCrunch/requirements.txt
+++ b/ByteNCrunch/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 cryptography==41.0.2
 decorator==5.1.1
 Flask==3.0.0
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
@@ -19,6 +20,7 @@ MarkupSafe==2.1.3
 mysql==0.0.3
 mysql-connector-python==8.0.33
 mysqlclient==2.2.0
+packaging==23.2
 protobuf==3.20.3
 pycparser==2.21
 python-dotenv==1.0.0
